Finish tela de login

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/colorapp"
     tools:context=".LoginActivity">
 
     <ImageView
@@ -22,10 +23,16 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+        android:background="@drawable/background_edit_text"
         android:ems="10"
         android:hint="Email"
+        android:textColor="@color/corbutton"
+        android:textColorHint="@color/white"
         android:inputType="textEmailAddress"
+        android:padding="15dp"
+        android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +46,12 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:ems="10"
+        android:textSize="15dp"
+        android:background="@drawable/background_edit_text"
+        android:padding="15dp"
         android:hint="senha"
+        android:textColor="@color/corbutton"
+        android:textColorHint="@color/white"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,6 +63,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Cadastre-se"
+        android:textSize="15dp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="@+id/btnLogin"
         app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
 
@@ -59,7 +74,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="recuperar conta"
+        android:text="Recuperar conta"
+        android:textSize="15dp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/btnLogin"
         app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
 
@@ -83,6 +101,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:text="Login"
+        android:background="@drawable/background_button_principal"
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
