--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="corprincipal">#8BC6EC</color>
+    <color name="corbutton">#F4A023</color>
 </resources>
