--- a/app/src/main/res/drawable/background_edit_text.xml
+++ b/app/src/main/res/drawable/background_edit_text.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#20293C"/>
+    <corners android:radius="5dp"/>
+    <stroke android:color="@color/corbutton"
+        android:width="2dp"/>
+</shape>
