--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/colorapp"
     tools:context=".CadastroActivity">
 
 
@@ -13,6 +14,7 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -22,13 +24,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_marginStart="32dp"
+            android:textColor="@color/white"
             android:text="Nome completo" />
 
         <EditText
             android:id="@+id/editCadNome"
+            android:layout_marginTop="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/background_edit_text"
+            android:padding="15dp"
+            android:textColor="@color/corbutton"
+            android:textColorHint="@color/white"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
             android:ems="10"
             android:hint="Qual seu nome"
             android:inputType="textPersonName" />
@@ -37,16 +48,27 @@
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="32dp"
             android:layout_weight="1"
             android:text="E-mail" />
 
         <EditText
-            android:id="@+id/editCadEmail"
-            android:layout_width="wrap_content"
+            android:id="@+id/editTextTextEmailAddress"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:hint="Digite seu melhor E-mail"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/corbutton"
+            android:textColorHint="@color/white"
             android:ems="10"
-            android:hint="Informe seu melhor e-mail"
+            android:background="@drawable/background_edit_text"
+            android:padding="15dp"
+
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
             android:inputType="textEmailAddress" />
 
         <TextView
@@ -54,23 +76,41 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Senha" />
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:textColor="@color/white"
+            android:text="Senha" />
 
         <EditText
             android:id="@+id/editCadSenha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/background_edit_text"
             android:ems="10"
             android:hint="Digite uma senha forte"
-            android:inputType="textPassword" />
+            android:textColor="@color/corbutton"
+            android:textColorHint="@color/white"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:inputType="textPassword"
+            android:padding="15dp" />
 
         <Button
             android:id="@+id/btnCadastro"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/background_button_principal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Button" />
+            android:textSize="15dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:text="Cadastrar" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
