--- a/app/src/main/res/layout/activity_splash1.xml
+++ b/app/src/main/res/layout/activity_splash1.xml
@@ -29,8 +29,9 @@
         android:layout_marginBottom="16dp"
         android:text="Meu Estoque"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/corbutton"
         android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.5"
