--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/colorapp"
-    tools:context=".CadastroActivity">
+    tools:context=".autenticacao.CadastroActivity">
 
 
     <LinearLayout
@@ -30,19 +30,19 @@
 
         <EditText
             android:id="@+id/editCadNome"
-            android:layout_marginTop="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="32dp"
             android:layout_weight="1"
             android:background="@drawable/background_edit_text"
-            android:padding="15dp"
-            android:textColor="@color/corbutton"
-            android:textColorHint="@color/white"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
             android:ems="10"
             android:hint="Qual seu nome"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:padding="15dp"
+            android:textColor="@color/corbutton"
+            android:textColorHint="@color/white" />
 
         <TextView
             android:id="@+id/textView4"
@@ -55,21 +55,21 @@
             android:text="E-mail" />
 
         <EditText
-            android:id="@+id/editTextTextEmailAddress"
+            android:id="@+id/editCadEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="Digite seu melhor E-mail"
-            android:layout_marginTop="8dp"
-            android:textColor="@color/corbutton"
-            android:textColorHint="@color/white"
-            android:ems="10"
-            android:background="@drawable/background_edit_text"
-            android:padding="15dp"
-
             android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
-            android:inputType="textEmailAddress" />
+            android:layout_weight="1"
+            android:background="@drawable/background_edit_text"
+            android:ems="10"
+            android:hint="Digite seu melhor E-mail"
+            android:inputType="textEmailAddress"
+
+            android:padding="15dp"
+            android:textColor="@color/corbutton"
+            android:textColorHint="@color/white" />
 
         <TextView
             android:id="@+id/textView3"
