--- a/app/src/main/res/layout/activity_cadastro_produto.xml
+++ b/app/src/main/res/layout/activity_cadastro_produto.xml
@@ -88,6 +88,6 @@
             android:textSize="15dp"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:textAllCaps="false"/>
+            android:textAllCaps="true"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
