--- a/app/src/main/res/layout/activity_cadastro_produto.xml
+++ b/app/src/main/res/layout/activity_cadastro_produto.xml
@@ -78,16 +78,16 @@
             android:padding="16dp"
             android:textColorHint="@color/white"/>
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSalvar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/background_button_principal"
             android:layout_marginTop="16dp"
+            android:background="@drawable/background_button_principal"
             android:text="Salvar"
-            android:textSize="15dp"
-            android:textStyle="bold"
+            android:textAllCaps="true"
             android:textColor="@color/white"
-            android:textAllCaps="true"/>
+            android:textSize="15dp"
+            android:textStyle="bold" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
