--- a/app/src/main/res/layout/toolbar_voltar.xml
+++ b/app/src/main/res/layout/toolbar_voltar.xml
@@ -14,8 +14,11 @@
         android:paddingEnd="16dp"
         android:src="@drawable/ic_voltar"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textView5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView5"
