--- a/app/src/main/res/layout/activity_recuperar_conta.xml
+++ b/app/src/main/res/layout/activity_recuperar_conta.xml
@@ -4,24 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/colorapp"
     tools:context=".autenticacao.RecuperarContaActivity">
 
     <EditText
         android:id="@+id/editRecuperarConta"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="92dp"
+        android:layout_marginEnd="16dp"
+        android:layout_weight="1"
+        android:background="@drawable/background_edit_text"
         android:ems="10"
-        android:inputType="textEmailAddress"
+        android:gravity="center"
+        android:hint="Digite o e-mail cadastrado"
+        android:inputType="textPersonName"
+        android:padding="10dp"
+        android:textColor="@color/corbutton"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonRecuperarConta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/background_button_principal"
+        android:text="Recuperar Senha"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editRecuperarConta" />
+        app:layout_constraintTop_toBottomOf="@+id/editRecuperarConta"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
