--- a/app/src/main/res/layout/activity_controle_produto.xml
+++ b/app/src/main/res/layout/activity_controle_produto.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/colorapp"
-    tools:context=".ControleProdutoActivity">
+    tools:context=".activity.ControleProdutoActivity">
+
 
     <include
         android:id="@+id/include2"
@@ -15,19 +16,48 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:indeterminateTint="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/rvProduto"
+        app:layout_constraintEnd_toEndOf="@+id/rvProduto"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/include2"
+        app:layout_constraintVertical_bias="0.418" />
+
+    <TextView
+        android:id="@+id/text_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="Carregando produtos..."
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar"
+        app:layout_constraintVertical_bias="0.025" />
+
     <com.tsuryo.swipeablerv.SwipeableRecyclerView
         android:id="@+id/rvProduto"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        tools:listitem="@layout/item_produto"
-        tools:itemCount="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include2"
+        app:layout_constraintVertical_bias="0.0"
         app:leftBgColor="@color/white"
         app:leftImage="@drawable/ic_remove"
         app:rightBgColor="@color/white"
         app:rightImage="@drawable/ic_edit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include2" />
+        tools:itemCount="1"
+        tools:listitem="@layout/item_produto" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
