--- a/app/src/main/res/layout/activity_from_produto.xml
+++ b/app/src/main/res/layout/activity_from_produto.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/colorapp"
-    tools:context=".CadastroProdutoActivity">
+    tools:context=".activity.FromProdutoActivity">
 
     <include
         android:id="@+id/include"
@@ -23,6 +23,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include">
+
+        <ImageView
+            android:id="@+id/imagem_produto"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_gravity="center_horizontal"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_product"
+            android:onClick="verificaPermissaoGalera"/>
         
         <TextView
             android:layout_width="wrap_content"
