--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -4,4 +4,7 @@
     <item android:id="@+id/menu_sobre"
         android:title="Sobre"/>
 
+    <item android:id="@+id/menu_sair"
+        android:title="Sair"/>
+
 </menu>
