--- a/app/src/main/res/layout/activity_from_produto.xml
+++ b/app/src/main/res/layout/activity_from_produto.xml
@@ -31,7 +31,7 @@
             android:layout_gravity="center_horizontal"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_product"
-            android:onClick="verificaPermissaoGalera"/>
+            android:onClick="abrirGaleria"/>
         
         <TextView
             android:layout_width="wrap_content"
