--- a/app/src/main/res/layout/activity_from_produto.xml
+++ b/app/src/main/res/layout/activity_from_produto.xml
@@ -14,6 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!--add ScrollView-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
