Feature/Modifucicação button de recuperação

--- a/app/src/main/res/layout/activity_recuperar_conta.xml
+++ b/app/src/main/res/layout/activity_recuperar_conta.xml
@@ -11,9 +11,9 @@
         android:id="@+id/editRecuperarConta"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="92dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="32dp"
         android:layout_weight="1"
         android:background="@drawable/background_edit_text"
         android:ems="10"
@@ -30,9 +30,11 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonRecuperarConta"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
         android:background="@drawable/background_button_principal"
         android:text="Recuperar Senha"
         android:textColor="@color/white"
